--- a/src/css/App.css
+++ b/src/css/App.css
@@ -23,9 +23,9 @@ body {
   height: auto;
   padding: 0px 30px;
   margin: 0 auto;
-  border-radius: 6px;
   -webkit-box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
           box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border: 1px solid black;
   background-color: #273c75;
   color: #f5f6fa;
 }
@@ -70,14 +70,14 @@ body {
   -webkit-box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
           box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
-.App .length .container ion-icon {
+.App .length .container .icon {
   cursor: pointer;
   line-height: 2em;
   font-size: 30px;
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
 }
-.App .length .container ion-icon:hover {
+.App .length .container .icon:hover {
   font-size: 2.2em;
 }
 .App .length .container .increment {
