--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -16,8 +16,8 @@ body {
 	height: auto;
     padding: 0px 30px;
     margin: 0 auto;
-    border-radius: 6px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+	border: 1px solid black;
 	background-color: $main-blue;
 	color: $light-white;
 	.length-container {
@@ -44,7 +44,7 @@ body {
 			width: 150px;
 			height: 70px;
 			box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-			ion-icon {
+			.icon {
 				cursor: pointer;
 				line-height: 2em;
 				font-size: 30px;
